Adds sections' contents
-Creates Tutorial, Generate, Classes and Blocks JS fIles with content (stub)
-Modifies Selector component to use the onClick function if exists
-Modifies _utilities SCSS file to use a proper color palette from lospec
-Modifies selector SCSS for new color palette
-Creates visual SCSS file for .visual-container

--- a/public/styles/_utilities.scss
+++ b/public/styles/_utilities.scss
@@ -1,7 +1,10 @@
-$color_0: #101010;
-$color_1: #292929;
-$color_2: #404040;
-$color_9: #E7DFD4;
+/* Palette "OIL 6", taken from "https://lospec.com/palette-list/oil-6" */
+$color_0: #272744;
+$color_1: #494d7e;
+$color_2: #8b6d9c;
+$color_3: #c69fa5;
+$color_4: #f2d3ab;
+$color_5: #fbf5ef;
 
 @mixin small {
     @media only screen and (min-width: 600px){
