--- a/public/styles/selector.scss
+++ b/public/styles/selector.scss
@@ -10,14 +10,9 @@
     }
 
     .selector-option {
-        position: relative;
-        top: 0;
-        right: 0;
-
         padding: 10px;
         margin: 10px;
         box-shadow: 5px 5px 7px $color_1;
-        transition: all .25s ease;
 
         border:{
             width: 2px;
@@ -26,12 +21,19 @@
             radius: 5px;
         }
 
-        &:hover {
-            $diff: 3px;
-            cursor: pointer;
-            top: -$diff;
-            right: $diff;
-            box-shadow: (5px + 2*$diff) (5px + 2*$diff) 3px $color_1;
+        @include small{
+            position: relative;
+            top: 0;
+            right: 0;
+            transition: all .25s ease;
+
+            &:hover {
+                $diff: 3px;
+                cursor: pointer;
+                top: -$diff;
+                right: $diff;
+                box-shadow: (5px + 2*$diff) (5px + 2*$diff) 3px $color_1;
+            }
         }
 
         width: 80%;
