--- a/public/styles/visual.scss
+++ b/public/styles/visual.scss
@@ -3,9 +3,55 @@
 .visual-container {
     @include flex-box;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
 
-    .visual-block {
+    /* Tutorial */
+    .tutorial-block {
         padding: 10px;
+    }
+
+    /* Blocks */
+    .blocks-form {
+        width: 75%;
+        background-color: $color_1;
+        border-radius: 10px;
+        padding: 20px;
+
+        .blocks-input {
+            width: 100%;
+            padding: 10px;
+
+            & > div {
+                display: inline-block;
+                width: 50%;
+            }
+
+            input, select{
+                background-color: $color_0;
+
+                color: $color_5;
+                border-radius: 5px;
+                width: 100%;
+                padding: 10px;
+            }
+        }
+
+        .blocks-submit {
+            
+            border-radius: 15px;
+            background-color: $color_2;
+            color: $color_0;
+            transition: all .25s ease;
+            font-size: medium;
+
+            &:hover {
+                background-color: $color_0;
+                color: $color_2;
+            }
+
+            width: 100%;
+            padding: 15px;
+        }
     }
 }
