Adds structure to class visualizer
-Adds useEffect in App for eventListener in window to get width
-Adds structure to Classes JS file, with different layout when viewed from small screen
-Modifies proportions of selector divs in main and selector SCSS file
-Adds Classes styles to visual SCSS file

--- a/public/styles/selector.scss
+++ b/public/styles/selector.scss
@@ -3,6 +3,7 @@
 .selector-container {
     @include flex-box;
     flex-direction: row;
+    align-items: center;
     text-align: center;
     @include small{
         flex-direction: column;
@@ -26,6 +27,7 @@
             top: 0;
             right: 0;
             transition: all .25s ease;
+            width: 65%;
 
             &:hover {
                 $diff: 3px;
@@ -36,7 +38,7 @@
             }
         }
 
-        width: 80%;
+        width: 60%;
     }
 
     .selector-arrow {
