Finishes schedules' first-part styling
-Modifies Utilities SCSS to contain styles for clickers
-Removes some styles from Visual SCSS to use mixin style for clickers
-Adds stub structure for schedules

--- a/public/styles/_utilities.scss
+++ b/public/styles/_utilities.scss
@@ -32,6 +32,19 @@ $color_5: #ffe2c6;
     display: flex;
 }
 
+@mixin styles_clicker {
+    color: $color_5;
+    border-color: $color_2;
+    background-color: $color_1;
+
+    &:hover {
+        @content;
+        cursor: pointer;
+        border-color: $color_1;
+        background-color: $color_2;
+    }
+}
+
 @mixin blur($val){
     -webkit-filter: blur($val);
     -moz-filter: blur($val);
