--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -14,6 +14,7 @@ body {
 #schedule-app {
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
 
     @include flex-box;
     flex-direction: column;
