Completes visualization of schedules
-Creates Arrow.png
-Adds mixin in Utilities.scss to show the arrows with specified rotations
-Modifies visual.scss to include the arrow mixin and responsiveness of schedule
-Removes placeholders of arrows divs in SvgSchedule.js

--- a/public/styles/_utilities.scss
+++ b/public/styles/_utilities.scss
@@ -45,6 +45,21 @@ $color_5: #ffe2c6;
     }
 }
 
+@mixin arrow($angle1, $angle2){
+    background-image: url("../imgs/Arrow.png");
+    background-size: cover;
+    transform: rotate($angle2);
+    @include small {
+        transform: rotate($angle1);
+    }
+    opacity: 0.5;
+
+    &:hover {
+        cursor: pointer;
+        opacity: 1;
+    }
+}
+
 @mixin blur($val){
     -webkit-filter: blur($val);
     -moz-filter: blur($val);
