--- a/public/styles/visual.scss
+++ b/public/styles/visual.scss
@@ -181,18 +181,18 @@
         &-visual {
             width: 87.5%;
             overflow-y: auto;
+            text-align: center;
 
             .schedule-checker {
                 width: 50%;
+                padding: 15px;
 
                 @include small {
                     width: 33%;
                 }
-                display: inline-flex;
-                padding: 15px;
 
+                display: inline-flex;
                 flex-direction: column;
-                align-items: center;
 
                 .schedule-class {
                     padding: 10px;
@@ -208,11 +208,18 @@
 
             .schedule-visualizer {
                 display: grid;
-                grid-template-columns: 2fr 5fr 2fr;
+                grid-template-columns: 1fr 2fr 1fr;
                 grid-template-areas:
-                "courses schedule arrowp"
-                "courses schedule null"
-                "courses schedule arrown";
+                "schedule schedule schedule"
+                "arrowp courses arrown";
+
+                @include small {
+                    grid-template-columns: 2fr 5fr 2fr;
+                    grid-template-areas:
+                    "courses schedule arrowp"
+                    "courses schedule null"
+                    "courses schedule arrown";
+                }
 
                 .schedule-courses {
                     grid-area: courses;
@@ -228,13 +235,21 @@
                     }
 
                     &-prev {
+                        @include arrow(-90deg, -180deg);
                         grid-area: arrowp;
                     }
 
                     &-next {
+                        @include arrow(90deg, 0);
                         grid-area: arrown;
                     }
                 }
+            }
+
+            button {
+                padding: 10px;
+                margin: 10px;
+                @include styles_clicker;
             }
         }
     }
