Adds arrow background to mobile version
-Adds arrow mixin in selector.scss to show arrows when changing tabs
-Deletes overflow handler in main.scss
-Adds overflow property to visual.scss
-Modifies Classes.js to center message when no classes were added

--- a/public/styles/visual.scss
+++ b/public/styles/visual.scss
@@ -4,6 +4,8 @@
     @include flex-box;
     flex-direction: column;
     align-items: center;
+    height: auto;
+    overflow: auto;
 
     @include small {
         justify-content: center;
