--- a/public/styles/selector.scss
+++ b/public/styles/selector.scss
@@ -48,12 +48,11 @@
         }
 
         &-right{
-            -moz-transform: scaleX(-1);
-            -webkit-transform: scaleX(-1);
-            -o-transform: scaleX(-1);
-            transform: scaleX(-1);
-            -ms-filter: fliph;
-            filter: fliph;
+            @include arrow(0, 0);
         }
+
+        &-left{
+            @include arrow(0, 180deg);
+        } 
     }
 }
