--- a/styles/visual.css
+++ b/styles/visual.css
@@ -7,6 +7,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: auto;
+  overflow: auto;
   /* Tutorial */
   /* Blocks */
   /* Classes */
