--- a/styles/selector.css
+++ b/styles/selector.css
@@ -45,8 +45,12 @@
   aspect-ratio: 1;
 }
 .selector-container .selector-arrow-right {
-  background-image: url("../imgs/Arrow.png");
+  background: url("../imgs/Arrow.png");
   background-size: cover;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
   transform: rotate(0);
   opacity: 0.5;
 }
@@ -60,8 +64,12 @@
   opacity: 1;
 }
 .selector-container .selector-arrow-left {
-  background-image: url("../imgs/Arrow.png");
+  background: url("../imgs/Arrow.png");
   background-size: cover;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
   transform: rotate(180deg);
   opacity: 0.5;
 }
