Refactors styling and fixes minor bugs
- Moves all global SCSS to its individual component or page
- Adds config file to use absolute paths for SASS
- Fixes not saving classes due to undefined value for the groups

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,4 @@
-@use "./utilities" as *;
+@use './utilities' as *;
 
 * {
     margin: 0;
@@ -22,7 +22,7 @@ body {
         flex-direction: row;
 
         $distribution: 30%;
-        .selector-container {
+        .navbarContainer {
             width: $distribution;
         }
 
