--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -1,6 +1,6 @@
-@use "./utilities" as *;
+@use 'styles/utilities' as *;
 
-.selector-container {
+.navbarContainer {
     @include flex-box;
     flex-direction: row;
     align-items: center;
@@ -10,17 +10,13 @@
         justify-content: center;
     }
 
-    .selector-option {
+    .navOption {
         padding: 10px;
         margin: 10px;
         box-shadow: 5px 5px 7px $color_1;
 
-        border:{
-            width: 2px;
-            style: solid;
-            color: $color_1;
-            radius: 5px;
-        }
+        border: 2px solid $color_1;
+        border-radius: 5px;
 
         @include small{
             position: relative;
@@ -41,17 +37,17 @@
         width: 60%;
     }
 
-    .selector-arrow {
-        &-left, &-right{
+    .navArrow {
+        &Left, &Right{
             width:20%;
             aspect-ratio: 1;
         }
 
-        &-right{
+        &Right{
             @include arrow(0, 0);
         }
 
-        &-left{
+        &Left{
             @include arrow(0, 180deg);
         } 
     }
