--- a/styles/Landpage.module.scss
+++ b/styles/Landpage.module.scss
@@ -1,3 +1,9 @@
-.tutorialBlock {
-    padding: 10px;
+.landpageContainer {
+    .landpageTitle {
+        text-align: center;
+    }
+
+    .landpageParagraph {
+        padding: 10px;
+    }
 }
