--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -1,54 +1,27 @@
 @use 'styles/utilities' as *;
 
 .navbarContainer {
-    @include flex-box;
+    $bottomLine: .25rem;
+    $paddingSpace: .75rem;
+    position: fixed;
+    overflow-x: auto;
+    background-color: $color_0;
+
+    width: 100%;
+    height: (2 * $paddingSpace) + $bottomLine + 1.24rem;
+
+    display: flex;
     flex-direction: row;
     align-items: center;
-    text-align: center;
-    @include small{
-        flex-direction: column;
-        justify-content: center;
-    }
+    border-bottom: $bottomLine solid $color_5;
 
     .navOption {
-        padding: 10px;
-        margin: 10px;
-        box-shadow: 5px 5px 7px $color_1;
+        cursor: pointer;
+        padding: $paddingSpace;
 
-        border: 2px solid $color_1;
-        border-radius: 5px;
-
-        @include small{
-            position: relative;
-            top: 0;
-            right: 0;
-            transition: all .25s ease;
-            width: 65%;
-
-            &:hover {
-                $diff: 3px;
-                cursor: pointer;
-                top: -$diff;
-                right: $diff;
-                box-shadow: (5px + 2*$diff) (5px + 2*$diff) 3px $color_1;
-            }
+        &.navSelected {
+            color: $color_0;
+            background-color: $color_5;
         }
-
-        width: 60%;
-    }
-
-    .navArrow {
-        &Left, &Right{
-            width:20%;
-            aspect-ratio: 1;
-        }
-
-        &Right{
-            @include arrow(0, 0);
-        }
-
-        &Left{
-            @include arrow(0, 180deg);
-        } 
     }
 }
