Refactors SvgSchedule to change arrows
- Creates custom hook to detect window size for changing the navigation arrows

--- a/components/Svgs/SvgSchedule.module.scss
+++ b/components/Svgs/SvgSchedule.module.scss
@@ -12,7 +12,6 @@
         grid-template-columns: 2fr 5fr 2fr;
         grid-template-areas:
         "courses schedule arrowp"
-        "courses schedule null"
         "courses schedule arrown";
     }
 
@@ -26,7 +25,10 @@
     
     .svgArrow {
         &Prev, &Next {
-            cursor: pointer;
+            @include styles_clicker;
+            padding: 1rem;
+            border-radius: 1rem;
+
             aspect-ratio: 1;
             justify-self: center;
             align-self: center;
