Modifies color palette
- Rewrites the entire color palette and how to import them
- Modifies styling of navbar options

--- a/components/DispSelectors/DispSelectors.module.scss
+++ b/components/DispSelectors/DispSelectors.module.scss
@@ -13,9 +13,9 @@
 
     .checkerClass {
         padding: 10px;
-        border: 1px solid $color_2;
+        border: 1px solid getBlue(2);
         border-radius: 10px;
-        background-color: $color_1;
+        background-color: getDark(0);
     }
 
     .checkerGroups {
