--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -5,7 +5,7 @@
     $paddingSpace: .75rem;
     position: fixed;
     overflow-x: auto;
-    background-color: $color_0;
+    background: linear-gradient(0, getDark(1) 0%, getDark(3) 100%);
 
     width: 100%;
     height: (2 * $paddingSpace) + $bottomLine + 1.24rem;
@@ -13,15 +13,21 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    border-bottom: $bottomLine solid $color_5;
+    border-bottom: $bottomLine solid getBlue(3);
 
-    .navOption {
+    .navOption, .navSelected {
         cursor: pointer;
         padding: $paddingSpace;
+        transition: all .25s;
+    }
 
-        &.navSelected {
-            color: $color_0;
-            background-color: $color_5;
-        }
+    .navOption:hover {
+        color: getBlue(0);
+        background: getDark(3);
+    }
+
+    .navSelected {
+        color: getDark(0);
+        background: linear-gradient(0, getBlue(3) 0%, getBlue(0) 100%);
     }
 }
