--- a/pages/blocks/create/Blocks.module.scss
+++ b/pages/blocks/create/Blocks.module.scss
@@ -2,7 +2,7 @@
 
 .blocksContainer {     
     .blocksForm {
-        background-color: $color_1;
+        background-color: getDark(0);
         border-radius: 10px;
         padding: 10px;
 
@@ -16,10 +16,10 @@
             }
 
             input, select{
-                background-color: $color_0;
-                border-color: $color_2;
+                background-color: getDark(1);
+                border-color: getBlue(0);
 
-                color: $color_5;
+                color: getBlue(3);
                 border-radius: 5px;
                 width: 100%;
                 padding: 10px;
@@ -28,17 +28,7 @@
 
         .blocksSubmit {
             border-radius: 15px;
-            border-color: $color_2;
-            background-color: $color_2;
-            color: $color_0;
-            transition: all .25s ease;
-            font-size: medium;
-
-            &:hover {
-                cursor: pointer;
-                background-color: $color_0;
-                color: $color_2;
-            }
+            @include styles_clicker;
 
             width: 100%;
             padding: 15px;
