--- a/pages/blocks/delete/Blocks.module.scss
+++ b/pages/blocks/delete/Blocks.module.scss
@@ -10,7 +10,7 @@
 
         .classHolder {
             h1 {
-                background-color: $color_1;
+                background-color: getDark(0);
                 padding: 10px;
             }
 
@@ -26,10 +26,12 @@
 
                 .blockHolder {
                     padding: 5px;
+                    transition: all .25s;
 
                     &:hover {
                         cursor: pointer;
-                        background-color: $color_1;
+                        background-color: getDark(1);
+                        box-shadow: 0 0 .25rem .25rem getDark(1);
                     }
                 }
             }
